--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechStock Manager - Logiciel de Gestion</title>
+
+    <!-- Tailwind CDN (OK for demo) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -23,12 +25,12 @@
         }
       }
     </script>
+
     <style>
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f8fafc;
       }
-      /* Custom scrollbar for tables */
       .custom-scrollbar::-webkit-scrollbar {
         height: 6px;
         width: 6px;
@@ -41,21 +43,8 @@
         border-radius: 4px;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
+  </head>
   <body>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+  </body>
 </html>
